Copied what the professor did in the lecture videos, including copying in the JPA statements in his powerpoint slides to our Course and SectionRepository classes and got them to function correctly by adding @OneToMany mappings within the Term and Course classes.

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,12 @@
 			<artifactId>selenium-api</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- end selenium -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.2.17.Final</version>
+        </dependency>
+        <!-- end selenium -->
 	</dependencies>
 
 	<build>
